# world_weaver

./: .env.example  .gitignore  AGENTS.md  README.md  WORLDCODEX_INTEGRATION_PLAN.md  pyproject.toml
data/: world-bible.md
data/patches/: 2026-04-10.json
data/snapshots/2026-04-09/: merge_report.json  patch.json  stories.json  world_after.json  world_before.json
data/snapshots/2026-04-10/: merge_report.json  stories.json  world_after.json
data/stories/: 2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json
data/worlds/: world_bible.json  world_bible.md  world_bible.seed.v1.json
docs/: reporter_story_contract.md  world_bible_mapping.md
src/world_weaver/: __init__.py  app.py  bootstrap.py  cli.py  config.py  schemas.py  world_entities.py  worldcodex_client.py
src/world_weaver/api/: auth.py  routes_world_entities.py
src/world_weaver/llm/: __init__.py  base.py  factory.py  mock_provider.py  openai_provider.py
src/world_weaver/prompts/: __init__.py  reporter_daily.md  world_architect_initial.md  world_architect_manual_update.md  world_architect_patch.md  worldcodex_patch_proposal.md
tests/: test_cli.py  test_feeds.py  test_health.py  test_openai_provider.py  test_story_generation.py  test_story_output_contract.py  test_world_bible_compatibility.py  test_world_bible_ingest.py  test_world_entities_api.py  test_world_generation.py  test_world_update.py  test_worldcodex_client.py  test_worldcodex_patch_proposal.py
tests/fixtures/: story_batch_example.json
(+12 files in other folders)
